# VexDB-Lite

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh.md  SECURITY.md  build.sh  build_duck.sh  build_sqlite.sh  duckdb-migration-guide.md  migration.md  product-capability-matrix.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build-linux.yml  build-mobile.yml  build-wheels.yml  build-windows.yml
common/data_type/: floatvector.h  half.h  halfutils.h  vec_common.h
common/graph_index/: graph_index_algorithm.h
common/include/: distance_funcs.h  half.h  macro.h  quantizer_type.h
common/module/: leak_checker.h  linux_perf.h  linux_perf_def.h  parallel_counter.h  perf_usage.h  timer.h
common/platform/: duck_compat.h  pg_compat.h  platform_compat.h
common/quantizer/: annkmeans.cpp  annkmeans.h  pq_alloc.cpp  pq_alloc.h  pq_endecode.h  product_quantizer.cpp  product_quantizer.h  quantizer.cpp  quantizer.h
common/rabitq/: estimator.h  query.h  rabitq.h  rabitq_cache.h  rabitq_distancer.h  rotator.h  utils.h
common/vtl/: README.md  allocator  array  bitlock.hpp  bitvector  bloom_filter.hpp  btree  holder  interval_set.hpp  list.hpp  lrucache.hpp  optional  pair  priority_queue  span  (+7 more)
community/: CMakeLists.txt  README.md  description.yml  extension_config.cmake
community/src/include/: vexdb_lite_extension.hpp
docs/: hybrid_index_guide.md
documentation/: README.md  build-guide.md  compatibility.md  features.md
release/: RELEASE_NOTES.md
scripts/: README_validate_arm.md  duck_concurrency_bench.py  duck_perf_profile.py  fix_duckdb_footer.py  release.sh  validate_arm_perf.py  validate_arm_perf.sh  validate_arm_topfixes.sh
thirdparties/: README.md
vexdb_duckdb/: CMakeLists.txt  README.md  vex_extension.cpp
vexdb_duckdb/compat/: shared_algo_probe.cpp
vexdb_duckdb/distance/: avx.cpp  avx512.cpp  general.cpp  neon.cpp  sse.cpp
vexdb_duckdb/functions/: distance_functions.cpp  index_info_function.cpp  vector_functions.cpp
vexdb_duckdb/include/: duck_pg_shim.hpp  vex_distance.hpp  vex_extension.hpp  vex_fetch_utils.hpp  vex_functions.hpp  vex_graph_index.hpp  vex_graph_index_depend_duck.hpp  vex_hnsw_node.hpp  vex_optimizer.hpp  vex_physical_create_index.hpp  vex_physical_index_scan.hpp  vex_simple_rwlock.hpp  vexdb_lite_extension.hpp
vexdb_duckdb/include/vex/: vex_disk_block_store.hpp  vex_disk_layout.hpp  vex_duck_memstore.hpp  vex_duck_point.hpp  vex_duckdb_compat.hpp
vexdb_duckdb/index/: graph_index.cpp  graph_index_disk.cpp  vex_disk_block_store.cpp
vexdb_duckdb/optimizer/: vex_optimizer.cpp  vex_physical_create_index.cpp  vex_physical_index_scan.cpp
vexdb_duckdb/test/: crash_recovery.cpp  explain_literal_query.cpp  run_extension_function_smoke.sh  run_sift_sql_benchmark.sh  smoke_create_index.cpp  stress_parallel_build.cpp
vexdb_duckdb/test/benchmark/: vex_sift_memory_limit_benchmark.cpp  vex_sift_sql_benchmark.cpp
vexdb_duckdb/test/benchmark/data/: README.txt
vexdb_duckdb/test/cpp/: test_duck_pg_shim.cpp  test_simple_rwlock.cpp
vexdb_duckdb/test/sql/unsupported_vex/: pq_bytes.test
vexdb_duckdb/test/sql/unsupported_vex/index/: graph_index_filter_mixed.test  graph_index_filtered_basic.test  graph_index_stability.test_slow
vexdb_pg/: CMakeLists.txt  vexdb_lite.control  vexdb_vector.control
vexdb_pg/include/: ann_utils.h  annkmeans.h  floatvector.h  global_instance.h  guc_config.h  index_inspect.h  pg_compat.h  pq.h  pq_pg_adapter.h  quantizer.h  rabitq_distancer.h  rel_utils.h  vector_storage.h
vexdb_pg/include/data_type/: halfvec.h  int8vec.h
vexdb_pg/include/disk_container/: blockmgr.hpp  buffer_cache.hpp  disk_hashtable.hpp  disk_hashtable_dependency.hpp  diskarray.hpp  diskvector.hpp  freespace.hpp  log_manager.hpp  plain_store.hpp  tempfilevector.hpp
vexdb_pg/include/distance/: cblas_interface.h  distance_guc.h
vexdb_pg/include/graph_index/: graph_index.h  graph_index_cluster.h  graph_index_param.h  graph_index_quantizer.h  graph_index_state.h  graph_index_storage.h  graph_index_struct.h  graph_index_xlog.h
vexdb_pg/include/module/: size_format.h
vexdb_pg/include/vector_buffer/: buffer_base.h  local_vec_cache.h  shared_alloc_set.h  vecbuf_shared.h  vector_buffer_manager.h  vector_smgr.h
vexdb_pg/sql/: vexdb_lite--1.0.sql  vexdb_vector--1.0.sql
vexdb_pg/src/: ann_utils.cpp  floatvector.cpp  guc_config.cpp  pg_init.cpp  pg_yield.cpp  pq.cpp  quantizer_stubs.cpp  rabitq_distancer.cpp  session_compat.cpp  vector_storage.cpp  vex_index_info.cpp
vexdb_pg/src/data_type/: floatvector.cpp  halfvec.cpp  int8vec.cpp
vexdb_pg/src/distance/: avx.cpp  avx512.cpp  distance.cpp  general.cpp  neon.cpp  rabitq_template.cpp  sse.cpp
vexdb_pg/src/graph_index/: graph_index.cpp  graph_index_am.cpp  graph_index_build.cpp  graph_index_insert.cpp  graph_index_inspect.cpp  graph_index_qtupdate.cpp  graph_index_qtupdate_worker.cpp  graph_index_scan.cpp  graph_index_utils.cpp  graph_index_vacuum.cpp
vexdb_pg/src/quantizer/: annkmeans.cpp  pq_adapter.cpp  rabitq_adapter.cpp
vexdb_pg/src/vector_buffer/: local_vec_cache.cpp  shared_alloc_set.cpp  vecbuf_worker.cpp  vector_smgr.cpp
vexdb_sqlite/: .clangd  .gitignore  CMakeLists.txt  README.md  vendor_sqlite.sh
vexdb_sqlite/include/: vex_distance_entry.h  vexdb_sqlite.h  vexdb_sqlite_internal.h
vexdb_sqlite/include/functions/: distance_functions.h  vector_codec.h
vexdb_sqlite/include/index/: graph_bridge.h
vexdb_sqlite/include/store/: vex_graph_index_depend_sqlite.hpp
vexdb_sqlite/include/vtab/: graph_index_vtab.h
vexdb_sqlite/src/: vexdb_sqlite_init.cpp
vexdb_sqlite/src/distance/: avx.cpp  avx512.cpp  general.cpp  neon.cpp  sse.cpp  vex_distance_entry.cpp
vexdb_sqlite/src/functions/: distance_functions.cpp  vector_codec.cpp
vexdb_sqlite/src/index/: graph_algo_smoke.cpp  graph_bridge.cpp
vexdb_sqlite/src/vtab/: graph_index_vtab.cpp
vexdb_sqlite/test/: m0_static_smoke.c  m1_cross_engine_check.py  m1_distance_smoke.c  m2_vtab_smoke.c  m3_hnsw_smoke.c  m3p_parallel_smoke.cpp
(+356 files in other folders)
