cmake_minimum_required(VERSION 2.8.12...3.29)

project(VexdbDuckExtension)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(Boost REQUIRED)

include_directories(
    include
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/../common
    ${CMAKE_CURRENT_SOURCE_DIR}/../common/include
    ${Boost_INCLUDE_DIRS}
)

execute_process(
    COMMAND git rev-parse --short HEAD
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    OUTPUT_VARIABLE VEXDB_DUCK_GIT_HASH
    OUTPUT_STRIP_TRAILING_WHITESPACE
    ERROR_QUIET)
if(NOT VEXDB_DUCK_GIT_HASH)
    set(VEXDB_DUCK_GIT_HASH "unknown")
endif()
string(TIMESTAMP VEXDB_DUCK_BUILD_TIME "%Y-%m-%d %H:%M")
add_definitions(-DVEXDB_DUCK_GIT_HASH="${VEXDB_DUCK_GIT_HASH}")
add_definitions(-DVEXDB_DUCK_BUILD_TIME="${VEXDB_DUCK_BUILD_TIME}")
add_definitions(-DPG_VEXDB_TARGET_DUCK)

set(VEXDB_DUCK_EXTENSION_FILES
    vex_extension.cpp
    functions/distance_functions.cpp
    functions/vector_functions.cpp
    functions/index_info_function.cpp
    index/graph_index.cpp
    index/graph_index_disk.cpp
    index/vex_disk_block_store.cpp
    optimizer/vex_optimizer.cpp
    optimizer/vex_physical_create_index.cpp
    optimizer/vex_physical_index_scan.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../common/quantizer/pq_alloc.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../common/quantizer/annkmeans.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../common/quantizer/product_quantizer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../common/distance/src/architecture.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../common/distance/src/general_dispatcher.cpp
    # PQ shared-layer dispatcher (uses backend-neutral template instances
    # generated by the per-arch duck/*.cpp files below).
    ${CMAKE_CURRENT_SOURCE_DIR}/../common/distance/src/pq_dispatcher.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/distance/general.cpp
)

if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|amd64")
    list(APPEND VEXDB_DUCK_EXTENSION_FILES
        ${CMAKE_CURRENT_SOURCE_DIR}/../common/distance/src/sse_dispatcher.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/../common/distance/src/avx_dispatcher.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/../common/distance/src/avx512_dispatcher.cpp
        # PQ-specific SIMD primitives per ISA (instantiate the
        # backend-neutral templates with DISTANCE_FUNC_NAME prefix).
        ${CMAKE_CURRENT_SOURCE_DIR}/distance/sse.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/distance/avx.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/distance/avx512.cpp
    )
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64")
    list(APPEND VEXDB_DUCK_EXTENSION_FILES
        ${CMAKE_CURRENT_SOURCE_DIR}/../common/distance/src/neon_dispatcher.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/distance/neon.cpp
    )
endif()

build_static_extension(vex ${VEXDB_DUCK_EXTENSION_FILES})
set(PARAMETERS "-warnings")
build_loadable_extension(vex ${PARAMETERS} ${VEXDB_DUCK_EXTENSION_FILES})

target_compile_features(vex_extension PRIVATE cxx_std_17)
target_compile_features(vex_loadable_extension PRIVATE cxx_std_17)

set(SIMD_COMMON_FLAGS "-ftree-vectorize -fassociative-math -fno-signed-zeros -fno-trapping-math -floop-interchange -fno-exceptions -funroll-loops -g1")
set(SIMD_WARN_FLAGS "-Wno-ignored-attributes")

# Release builds get -O3 + ffp-contract=fast (enable FMA contraction).
if(NOT CMAKE_BUILD_TYPE STREQUAL "DEBUG")
    set(SIMD_COMMON_FLAGS "${SIMD_COMMON_FLAGS} -O3 -ffp-contract=fast")
endif()

include(CheckCXXCompilerFlag)

if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|amd64")
    set_source_files_properties(
        ${CMAKE_CURRENT_SOURCE_DIR}/../common/distance/src/sse_dispatcher.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/distance/sse.cpp
        PROPERTIES COMPILE_FLAGS "${SIMD_COMMON_FLAGS} -msse3 -msse4.1 -msse4.2 -mfma -mf16c ${SIMD_WARN_FLAGS}")
    set_source_files_properties(
        ${CMAKE_CURRENT_SOURCE_DIR}/../common/distance/src/avx_dispatcher.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/distance/avx.cpp
        PROPERTIES COMPILE_FLAGS "${SIMD_COMMON_FLAGS} -mavx -mavx2 -mfma -mf16c ${SIMD_WARN_FLAGS}")
    set_source_files_properties(
        ${CMAKE_CURRENT_SOURCE_DIR}/../common/distance/src/avx512_dispatcher.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/distance/avx512.cpp
        PROPERTIES COMPILE_FLAGS "${SIMD_COMMON_FLAGS} -mavx512f -mavx512dq -mavx512bw -mavx512vl -mavx -mavx2 -mfma -mf16c ${SIMD_WARN_FLAGS}")
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64")
    # Kunpeng/TaiShan v110 baseline (LSE + fp16 + dotprod + crc). ARMv8.0 cores
    # (Cortex-A53/A57) will SIGILL on LSE — release-notes ARMv8.2 minimum.
    if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL "8.0")
        set(NEON_FLAGS "${SIMD_COMMON_FLAGS} -march=armv8.2-a+lse+fp16+dotprod+crc ${SIMD_WARN_FLAGS}")
    else()
        set(NEON_FLAGS "${SIMD_COMMON_FLAGS} -march=armv8.2-a+lse+fp16 ${SIMD_WARN_FLAGS}")
    endif()
    check_cxx_compiler_flag("-mtune=tsv110" HAS_MTUNE_TSV110_DUCK)
    if(HAS_MTUNE_TSV110_DUCK)
        set(NEON_FLAGS "${NEON_FLAGS} -mtune=tsv110")
    endif()
    set_source_files_properties(
        ${CMAKE_CURRENT_SOURCE_DIR}/../common/distance/src/neon_dispatcher.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/distance/neon.cpp
        PROPERTIES COMPILE_FLAGS "${NEON_FLAGS}")
endif()
